data/derived/fa15/progs/unify/prog0787.ml.out
Characters 135-136:
  	|[] -> (0,(sum / 10) :: (sum mod 10) :: a)
                                           ^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type int list
       Type 'a * 'b is not compatible with type int 
